Maintain Volume constraint doesn't actually maintain the volume correctly. #48079

Closed
opened 2016-04-07 22:16:56 +02:00 by Alexander Gavrilov · 8 comments

System Information

Fedora 21

Blender Version

Broken: 2.77 (was broken since being introduced judging by source code history)

Short description of error

The constraint is supposed to maintain the volume of the object as it's scaled in one dimension. Instead it overcompensates so that scaling the free dimension down by 2 increases the actual volume 4x.

Exact steps for others to reproduce the error

This file contains an example: test-maintain-volume.blend

There are 3 standard cubes: one unchanged, one scaled by 0.5 in Z with Stretch To, and one using Maintain Volume. The Maintain Volume one is obviously larger, and it's confirmed by the dimensions: 5.6575.6571 = 32 > 222 = 8

Looking at the source code, it uses a strange formula that looks like "sqrt(volume / scale) / scale", i.e. effectively sqrt(base / scale ^ 3). I would expect it to be just sqrt(volume / scale).

**System Information** Fedora 21 **Blender Version** Broken: 2.77 (was broken since being introduced judging by source code history) **Short description of error** The constraint is supposed to maintain the volume of the object as it's scaled in one dimension. Instead it overcompensates so that scaling the free dimension down by 2 increases the actual volume 4x. **Exact steps for others to reproduce the error** This file contains an example: [test-maintain-volume.blend](https://archive.blender.org/developer/F301291/test-maintain-volume.blend) There are 3 standard cubes: one unchanged, one scaled by 0.5 in Z with Stretch To, and one using Maintain Volume. The Maintain Volume one is obviously larger, and it's confirmed by the dimensions: 5.657*5.657*1 = 32 > 2*2*2 = 8 Looking at the source code, it uses a strange formula that looks like "sqrt(volume / scale) / scale", i.e. effectively sqrt(base / scale ^ 3). I would expect it to be just sqrt(volume / scale).
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @angavrilov

Added subscriber: @angavrilov

Added subscribers: @Sergey, @ideasman42, @mont29

Added subscribers: @Sergey, @ideasman42, @mont29

Indeed does not look correct at all here… Not sure who maintains that code, @campbellbarton. @Sergey?

Indeed does not look correct at all here… Not sure who maintains that code, @campbellbarton. @Sergey?

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sergey Sharybin self-assigned this 2016-04-12 13:59:55 +02:00

While it's an odd behavior, changing it now is not really safe thing to do. We have to keep all the compatibility for 2.7x.

I would suggest making fixes here after 2.8 branch is done, for until then considering it a TODO https://wiki.blender.org/index.php/Dev:Source/Development/Todo/Animation#Constraints

While it's an odd behavior, changing it now is not really safe thing to do. We have to keep all the compatibility for 2.7x. I would suggest making fixes here after 2.8 branch is done, for until then considering it a TODO https://wiki.blender.org/index.php/Dev:Source/Development/Todo/Animation#Constraints
Author
Member

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'
Author
Member

Fixed by 735e287271

Fixed by 735e287271
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48079
No description provided.