Fix T48079: Maintain Volume constraint overcompensates.

The coefficient has been wrong since introduction for some reason.

Not backwards compatible, should not be merged to 2.7*.